--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,7 @@ on:
       set_code:
         description: "code"
         required: true
-        default: "beryllium"
+        default: "gemini"
       set_ui:
         description: "ui"
         required: true
