--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -71,6 +71,8 @@ jobs:
           
       - name: build
         run: |
+          pmbootstrap build liunx-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}
+          pmbootstrap build device-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}
           echo -e "1234\n1234\n" | pmbootstrap install --android-recovery-zip --recovery-install-partition=data
           # <<EOF
 
