--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -71,8 +71,8 @@ jobs:
           
       - name: build
         run: |
-          pmbootstrap build liunx-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}
-          pmbootstrap build device-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}
+          # pmbootstrap build liunx-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}
+          # pmbootstrap build device-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}
           echo -e "1234\n1234\n" | pmbootstrap install --android-recovery-zip --recovery-install-partition=data
           # <<EOF
 
@@ -83,6 +83,7 @@ jobs:
           zip_path=$(readlink -f /tmp/postmarketOS-export/pmos-*.zip)
           echo "Zip path: $zip_path"
           echo "::set-output name=zip_path::$zip_path"
+        id: get_zip_path
           
       - name: Upload zip
         uses: actions/upload-artifact@v3
