--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Upload zip
         uses: actions/upload-artifact@v3
         with:
-          name: pmos
+          name: pmos-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}-${{ github.event.inputs.set_ui }}
           path: ${{ steps.get_zip_path.outputs.zip_path }}
 
 
