--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -71,7 +71,7 @@ jobs:
           
       - name: build
         run: |
-          pmbootstrap build liunx-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}
+          pmbootstrap build linux-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}
           pmbootstrap build device-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}
           echo -e "1234\n1234\n" | pmbootstrap install --android-recovery-zip --recovery-install-partition=data
           # <<EOF
