--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
           # ${{ github.event.inputs.set_Channel }}
           # ${{ github.event.inputs.set_Device }}
           # ${{ github.event.inputs.set_code }}
-          # ${{ github.event.inputs.set_code }}
+          # ${{ github.event.inputs.set_kernel }}
           # wpa_supplicant
           # ${{ github.event.inputs.set_ui }}
 
