--- a/.github/workflows/add.yml
+++ b/.github/workflows/add.yml
@@ -30,7 +30,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
+        
+      - name: Cleanup Disk
+        uses: HandsomeYingyan/cleanup-disk-action@v3.0
+      
       - name: Installation pmbootstrap
         run: |
           
