--- a/.github/workflows/add.yml
+++ b/.github/workflows/add.yml
@@ -78,7 +78,7 @@ jobs:
           echo "Zip path: $zip_path"
           echo "zip_path=$zip_path" >> $GITHUB_ENV
         id: get_zip_path
-          
+         
       - name: Upload zip
         uses: actions/upload-artifact@v3
         with:
@@ -88,3 +88,9 @@ jobs:
         if: failure()
         run: |
           pmbootstrap log
+      - name: Upload log
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: log
+          path:  /home/runner/.local/var/pmbootstrap/log.txt
