--- a/.github/workflows/add.yml
+++ b/.github/workflows/add.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           
           sudo apt update
-          sudo apt install git 
+          sudo apt install git python3 python3-tomli
           git clone https://gitlab.com/postmarketOS/pmbootstrap.git
           cd pmbootstrap
           git checkout 2.3.x
