--- a/test/linux-xiaomi-capricorn/APKBUILD
+++ b/test/linux-xiaomi-capricorn/APKBUILD
@@ -14,7 +14,7 @@ options="!strip !check !tracedeps
 	pmb:cross-native
 	pmb:kconfigcheck-community
 "
-makedepends="bash bison findutils flex installkernel openssl-dev perl"
+makedepends="bash bison findutils flex installkernel openssl-dev perl python3"
 
 # Source
 _commit=staging
