--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: nix-build
         run: |
-          su
+          echo -e "1234\n1234\n" | sudo passwd root
           git clone https://github.com/mobile-nixos/mobile-nixos.git
           cd mobile-nixos
           export NIXPKGS_ALLOW_UNFREE=1
