--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -31,7 +31,7 @@ jobs:
       - name: nix-build
         run: |
           echo -e "1234\n1234\n" | sudo passwd root
-          echo -e "1234\n"|su
+          echo -e "1234\n"|su root
           git clone https://github.com/mobile-nixos/mobile-nixos.git
           cd mobile-nixos
           export NIXPKGS_ALLOW_UNFREE=1
