--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: nix-build
         run: |
-          echo -e "1234\n1234\n" | sudo passwd root
+          echo -e "1234\n1234\n" | sudo passwd
           echo -e "1234\n" | sudo su          
           git clone https://github.com/mobile-nixos/mobile-nixos.git
           cd mobile-nixos
