--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -30,10 +30,8 @@ jobs:
 
       - name: nix-build
         run: |
-          echo -e "1234\n1234\n" | sudo passwd root
-          sudo su          
           git clone https://github.com/gmicroul/mobile-nixos.git
           cd mobile-nixos
           export NIXPKGS_ALLOW_UNFREE=1
-          nix-build examples\/${{ github.event.inputs.set_example }}\/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
+          sudo nix-build examples\/${{ github.event.inputs.set_example }}\/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
    
