--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -33,5 +33,5 @@ jobs:
           git clone https://github.com/gmicroul/mobile-nixos.git
           cd mobile-nixos
           export NIXPKGS_ALLOW_UNFREE=1
-          sudo nix-build examples\/${{ github.event.inputs.set_example }}\/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
+          sudo nix-build examples\/${{ github.event.inputs.set_example }}\/ --argstr device oneplus-fajita -A outputs.default
    
