--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        
+      - name: Cleanup Disk
+        uses: HandsomeYingyan/cleanup-disk-action@v3.0
 
       - name: Installation nix git
         run: |
