--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -35,5 +35,7 @@ jobs:
         run: |
           git clone https://github.com/gmicroul/mobile-nixos.git
           cd mobile-nixos
+          pwd
+          ls -ltr
           sudo nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
    
