--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -37,5 +37,6 @@ jobs:
           cd mobile-nixos
           pwd
           ls -ltr
+          export GC_INITIAL_HEAP_SIZE=12G
           sudo nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
    
