--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -37,6 +37,7 @@ jobs:
           cd mobile-nixos
           pwd
           ls -ltr
-          export GC_INITIAL_HEAP_SIZE=12G
-          sudo nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
+          # export GC_INITIAL_HEAP_SIZE=12G
+          export GC_MAXIMUM_HEAP_SIZE=30G
+          sudo GC_MAXIMUM_HEAP_SIZE=30G nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
    
