--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -12,30 +12,29 @@ env:
   TZ: Asia/Shanghai
 
 jobs:
-  build:
+  armv8_job:
+    # The host should always be Linux
     runs-on: ubuntu-22.04
-    if: github.event.repository.owner.id == github.event.sender.id
-
+    name: Build on ubuntu-22.04 armv8
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        
-      - name: Cleanup Disk
-        uses: HandsomeYingyan/cleanup-disk-action@v3.0
+      - uses: actions/checkout@v4
+      - uses: uraimo/run-on-arch-action@v2
+        name: Run commands
+        id: runcmd
+        with:
+          arch: armv8
+          distro: ubuntu22.04
 
-      - name: Installation kupferbootstrap git
-        run: |
-          
-          sudo apt update
-          sudo apt install git kupferbootstrap
-          
-          
+          # Not required, but speeds up builds by storing container images in
+          # a GitHub package registry.
+          githubToken: ${{ github.token }}
 
-      - name: kupferbootstrap-build
+          # Set an output parameter `uname` for use in subsequent steps
+          run: |
+            uname -a
+            echo ::set-output name=uname::$(uname -a)
+
+      - name: Get the output
+        # Echo the `uname` output parameter from the `runcmd` step
         run: |
-          git clone https://github.com/gmicroul/kupferbootstrap.git
-          cd kupferbootstrap
-          df -h /
-          pwd
-          ls -ltr
-          
+          echo "The uname output was ${{ steps.runcmd.outputs.uname }}"
