--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -12,17 +12,17 @@ env:
   TZ: Asia/Shanghai
 
 jobs:
-  armv8_job:
+  aarch64_job:
     # The host should always be Linux
     runs-on: ubuntu-22.04
-    name: Build on ubuntu-22.04 armv8
+    name: Build on ubuntu-22.04 aarch64
     steps:
       - uses: actions/checkout@v4
       - uses: uraimo/run-on-arch-action@v2
         name: Run commands
         id: runcmd
         with:
-          arch: armv8
+          arch: aarch64
           distro: ubuntu22.04
 
           # Not required, but speeds up builds by storing container images in
