--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -23,7 +23,7 @@ jobs:
         id: runcmd
         with:
           arch: aarch64
-          distro: ubuntu22.04
+          distro: archarm
 
           # Not required, but speeds up builds by storing container images in
           # a GitHub package registry.
