--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -35,6 +35,7 @@ jobs:
             echo ::set-output name=uname::$(uname -a)
             pacman -Sy
             pacman -S python docker docker-buildx git --needed --noconfirm
+            echo "$(whoami)"
             usermod -aG docker "$(whoami)"
             git clone -b dev https://gitlab.com/kupfer/kupferbootstrap
             cd kupferbootstrap
