--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -38,6 +38,17 @@ jobs:
           pwd
           ls -ltr
           # export GC_INITIAL_HEAP_SIZE=12G
-          export GC_MAXIMUM_HEAP_SIZE=30G
-          sudo GC_MAXIMUM_HEAP_SIZE=30G nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
+          # export GC_MAXIMUM_HEAP_SIZE=30G
+          sudo nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
+          zip_path=$(readlink -f /nix/nixos/*/*.img)
+          echo "Zip path: $zip_path"
+          echo "::set-output name=zip_path::$zip_path"
+        id: get_zip_path
+          
+      - name: Upload zip
+        uses: actions/upload-artifact@v4
+        with:
+          name: pmos-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}-${{ github.event.inputs.set_ui }}
+          path: ${{ steps.get_zip_path.outputs.zip_path }}
+          
    
