--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -40,7 +40,7 @@ jobs:
           # export GC_INITIAL_HEAP_SIZE=12G
           # export GC_MAXIMUM_HEAP_SIZE=30G
           sudo nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
-          zip_path=$(readlink -f /nix/nixos/*/*.img)
+          zip_path=$(readlink -f /nix/store/*/*.img)
           echo "Zip path: $zip_path"
           echo "::set-output name=zip_path::$zip_path"
         id: get_zip_path
