--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -40,7 +40,7 @@ jobs:
           # export GC_INITIAL_HEAP_SIZE=12G
           # export GC_MAXIMUM_HEAP_SIZE=30G
           sudo nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
-          zip_path=$(readlink -f /nix/store/*android-fastboot-images-oneplus-fajita*/*.img)
+          zip_path=$(readlink -f /nix/store/*android-fastboot-images-oneplus-fajita*/*)
           echo "Zip path: $zip_path"
           echo "::set-output name=zip_path::$zip_path"
         id: get_zip_path
@@ -51,7 +51,7 @@ jobs:
         with:
           #name: pmos-${{ github.event.inputs.set_Device }}-${{ github.event.inputs.set_code }}-${{ github.event.inputs.set_ui }}
           name: nixos-${{ github.event.inputs.set_example }}
-          path: ${{ steps.get_zip_path.outputs.zip_path }}
+          path: ${{ steps.get_zip_path.outputs.zip_path }}/*
 
           
           
