--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -22,8 +22,8 @@ jobs:
         name: Run commands
         id: runcmd
         with:
-          arch: amd64
-          distro: archlinux_latest
+          arch: aarch64
+          distro: archarm_latest
 
           # Not required, but speeds up builds by storing container images in
           # a GitHub package registry.
@@ -35,7 +35,7 @@ jobs:
             echo ::set-output name=uname::$(uname -a)
             pacman -Sy
             pacman -S python docker docker-buildx git glibc --needed --noconfirm
-            echo "$(whoami)"
+            echo "whoami=$(whoami)"
             usermod -aG docker "$(whoami)"
             git clone -b dev https://gitlab.com/kupfer/kupferbootstrap
             cd kupferbootstrap
