--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -33,6 +33,7 @@ jobs:
           run: |
             uname -a
             echo ::set-output name=uname::$(uname -a)
+            groupadd docker
             pacman -Sy
             pacman -S python docker docker-buildx git glibc --needed --noconfirm
             echo "whoami=$(whoami)"
