--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -33,11 +33,10 @@ jobs:
           run: |
             uname -a
             echo ::set-output name=uname::$(uname -a)
-            groupadd docker
             pacman -Sy
             pacman -S python docker docker-buildx git glibc --needed --noconfirm
             echo "whoami=$(whoami)"
-            usermod -aG docker "$(whoami)"
+            #usermod -aG docker "$(whoami)"
             git clone -b dev https://gitlab.com/kupfer/kupferbootstrap
             cd kupferbootstrap
             pip3 install -r requirements.txt
