--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -6,7 +6,7 @@ on:
       set_example:
         description: "example"
         required: true
-        default: "phosh"
+        default: "hkdm"
   
 env:
   TZ: Asia/Shanghai
