--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -39,6 +39,7 @@ jobs:
             kupferbootstrap --help
 
         - name: kupferboostrap config init oneplus-fajita
+          run: |
             pwd
             cp kupferbootstrap.toml ~/.config/kupfer/kupferbootstrap.toml
             kupferbootstrap image build oneplus-fajita
