--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -41,7 +41,7 @@ jobs:
         - name: kupferboostrap config init oneplus-fajita
           run: |
             pwd
-            cp kupferbootstrap.toml ~/.config/kupfer/kupferbootstrap.toml
+            cp ./kupferbootstrap.toml ~/.config/kupfer/kupferbootstrap.toml
             kupferbootstrap image build oneplus-fajita
 
         - name: Get the output
