--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -39,8 +39,8 @@ jobs:
             kupferbootstrap --help
             pwd
             kupferbootstrap config init -N
-            kupferbootstrap config profile init oneplus-fajita
-            cat .config/kupfer/kupferbootstrap.toml
+            kupferbootstrap config profile init 
+            cat ~/.config/kupfer/kupferbootstrap.toml
             kupferbootstrap image build oneplus-fajita
 
         - name: Get the output
