--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -38,9 +38,10 @@ jobs:
             ln -s "$(pwd)/bin/kupferbootstrap" /usr/local/bin/
             kupferbootstrap --help
             pwd
+            wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/kupferbootstrap.toml
             kupferbootstrap config init -N
             kupferbootstrap config profile init oneplus-fajita
-            cat ~/.config/kupfer/kupferbootstrap.toml
+            cp -r kupferbootstrap.toml ~/.config/kupfer/kupferbootstrap.toml
             kupferbootstrap image build oneplus-fajita
 
         - name: Get the output
