--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -28,7 +28,7 @@ jobs:
             uname -a
             echo ::set-output name=uname::$(uname -a)
             pacman -Sy
-            pacman -S python python-pip docker docker-buildx git glibc --needed --noconfirm
+            pacman -S python python-pip docker docker-buildx git glibc wget --needed --noconfirm
             rm /usr/lib/python3.12/EXTERNALLY-MANAGED
             echo "whoami=$(whoami)"
             usermod -aG docker "$(whoami)"
