--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -41,7 +41,7 @@ jobs:
             wget https://github.com/gmicroul/action_for_pmos/raw/refs/heads/main/kupferbootstrap.toml
             kupferbootstrap config init -N
             kupferbootstrap config profile init
-            cp -r kupferbootstrap.toml ~/.config/kupfer/kupferbootstrap.toml
+            cp -r ./kupferbootstrap.toml /root/.config/kupfer/kupferbootstrap.toml
             kupferbootstrap image build oneplus-fajita
 
         - name: Get the output
