--- a/.github/workflows/nixos.yml
+++ b/.github/workflows/nixos.yml
@@ -17,24 +17,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      
       - name: setup-qemu
-      - uses: sandervocke/setup-qemu-container@v1
+        uses: sandervocke/setup-qemu-container@v1
           with:
             container: nixos
             arch: aarch64
-      - name: Print architecture from within container
-        shell: run-in-container.sh {0}
+     # - name: Print architecture from within container
+     #   shell: run-in-container.sh {0}
           
 
       - name: nix-build
         run: |
+          nix-env -iA nixos.git 
           git clone https://github.com/gmicroul/mobile-nixos.git
           cd mobile-nixos
           pwd
           ls -ltr
           # export GC_INITIAL_HEAP_SIZE=12G
           # export GC_MAXIMUM_HEAP_SIZE=30G
-          sudo nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
+          nix-build examples/${{ github.event.inputs.set_example }}/ --argstr device oneplus-fajita -A outputs.android-fastboot-images
           zip_path=$(readlink -f /nix/store/*android-fastboot-images-oneplus-fajita)
           echo "Zip path: $zip_path"
           echo "::set-output name=zip_path::$zip_path"
