--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -20,8 +20,8 @@ jobs:
           with:
             container: archlinux
             arch: amd64
-        - name: Print architecture from within container
-          shell: run-in-container.sh {0}
+ #       - name: Print architecture from within container
+ #         shell: run-in-container.sh {0}
       
           # Set an output parameter `uname` for use in subsequent steps
           run: |
