--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -24,7 +24,7 @@ jobs:
  #         shell: run-in-container.sh {0}
 
         - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
+        #  uses: docker/setup-buildx-action@v3
           # Set an output parameter `uname` for use in subsequent steps
           run: |
             uname -a
