--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -24,8 +24,9 @@ jobs:
  #         shell: run-in-container.sh {0}
 
         - name: Set up Docker Buildx
-        #  uses: docker/setup-buildx-action@v3
+          uses: docker/setup-buildx-action@v3
           # Set an output parameter `uname` for use in subsequent steps
+        - name: Set up kupferbootstrap 
           run: |
             uname -a
             echo ::set-output name=uname::$(uname -a)
