--- a/.github/workflows/kupfer.yml
+++ b/.github/workflows/kupfer.yml
@@ -20,13 +20,10 @@ jobs:
           with:
             container: archlinux
             arch: amd64
- #       - name: Print architecture from within container
- #         shell: run-in-container.sh {0}
 
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
-          # Set an output parameter `uname` for use in subsequent steps
-        - name: Set up kupferbootstrap 
+
+        - name: Print architecture from within container
+          shell: run-in-container.sh {0}
           run: |
             uname -a
             echo ::set-output name=uname::$(uname -a)
